Apply refaster patches